# packageGES

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  scriptWithPackage.py  setup.py
packageGES/: bus.py  calcul_ges.py
packageGES/data/: impactCarbone.xlsx
